# ais-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.omc/state/: agent-replay-89425771-48b9-4386-b352-9b5b592761f4.jsonl  hud-stdin-cache.json  subagent-tracking.json
.omc/state/sessions/89425771-48b9-4386-b352-9b5b592761f4/: hud-state.json
src/ais_engine/: __init__.py  constants.py  emission.py  export.py  fuel.py  grid.py  interpolation.py  mode.py  models.py  pipeline.py  repository.py
tests/: test_emission.py  test_export.py  test_fuel.py  test_grid.py  test_interpolation.py  test_mode.py  test_regression.py  test_v3_consistency.py
tests/fixtures/: synthetic_ships.csv  synthetic_track.csv
